# UrbiLoquendoASR

./: CMakeLists.txt  README.md  simple.grxml
src/: CMakeLists.txt  ULoquendoASR.cpp  ULoquendoASR.h
